--- a/test.html
+++ b/test.html
@@ -7,35 +7,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-*{
-  background-color: yellow;
-}
+    table {
+      border-collapse: collapse; /*이중선 제거*/
+    }
+
+    
+
+    tr {
+      /* border-bottom: blue; */
+    }
   </style>
 </head>
 
-<body style="
-width: 100%;
-height: 100%;
-top: 0;
-left: 0;
-height: 300px;
-background-color: green;
-position: relative;
-
-display: flex;
-align-items: center;
-justify-content: space-around;
-">
-<button>asdsa</button>
-<button>asdsa</button>
-  <button class="right-button" style="
-  position: relative;
-
-        ">
-    테스트버튼
-   
-  </button>
-
+<body>
+  <table>
+    <colgroup>
+      <col width="100px">
+      <col>
+      <col>
+      <col>
+    </colgroup>
+    <tbody>
+      <tr>
+        <th>Row 1</th> <!-- 첫 번째 열에 해당 행에 대한 정보를 제공합니다. -->
+        <td>Data 1-1</td>
+        <td>Data 1-2</td>
+        <td>Data 1-3</td>
+      </tr>
+      <tr>
+        <th>Row 2</th>
+        <td>Data 2-1</td>
+        <td>Data 2-2</td>
+        <td>Data 2-3</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
