--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="drawer-root"></div>
   <div id="toast-root"></div>
   <div id="backdrop-root"></div>
   <div id="modal-root"></div>
