--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/eclick_icon_16x16.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/eclick_icon_192x192.png" /> -->
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/eclick_icon_16x16.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="병원전문프로그램 클릭소프트 물품 주문을 위한 사이트입니다." />
+    <!-- OG TAG -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="ClickSoft 물품 주문" />
+    <meta property="og:url" content="www.click-soft.shop" />
+    <meta property="og:description" content="클릭소프트 물품 접수 clicksoft click-soft 클릭" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/eclick_icon_192x192.png" /> -->
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,17 +26,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>클릭 Shop!</title>
-</head>
+    <title>클릭 Shop!</title>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="drawer-root"></div>
-  <div id="toast-root"></div>
-  <div id="backdrop-root"></div>
-  <div id="modal-root"></div>
-  <div id="root"></div>
-  <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="drawer-root"></div>
+    <div id="toast-root"></div>
+    <div id="backdrop-root"></div>
+    <div id="modal-root"></div>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -42,6 +46,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
