--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>클릭 Shop!</title>
+    <title>클릭소프트 Shop!</title>
   </head>
 
   <body>
