--- a/test.html
+++ b/test.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    table {
-      border-collapse: collapse; /*이중선 제거*/
-    }
-
-    
-
-    tr {
-      /* border-bottom: blue; */
-    }
-  </style>
-</head>
-
-<body>
-  <table>
-    <colgroup>
-      <col width="100px">
-      <col>
-      <col>
-      <col>
-    </colgroup>
-    <tbody>
-      <tr>
-        <th>Row 1</th> <!-- 첫 번째 열에 해당 행에 대한 정보를 제공합니다. -->
-        <td>Data 1-1</td>
-        <td>Data 1-2</td>
-        <td>Data 1-3</td>
-      </tr>
-      <tr>
-        <th>Row 2</th>
-        <td>Data 2-1</td>
-        <td>Data 2-2</td>
-        <td>Data 2-3</td>
-      </tr>
-    </tbody>
-  </table>
-</body>
-
+  <body>
+    <div>
+      <select name="" id="">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
+    </div>
+  </body>
 </html>
