--- a/test.html
+++ b/test.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script></script>
+    <style>
+      .select-editable { position:relative; background-color:white; border:solid grey 1px;  width:120px; height:18px; }
+      .select-editable select { position:absolute; top:0px; left:0px; font-size:14px; border:none; width:120px; margin:0; }
+      .select-editable input { position:absolute; top:0px; left:0px; width:100px; padding:1px; font-size:12px; border:none; }
+      .select-editable select:focus, .select-editable input:focus { outline:none; }
+    </style>
   </head>
 
   <body>
     <div>
-      <select name="" id="">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-      </select>
+      <div class="select-editable">
+        <select onchange="this.nextElementSibling.value=this.value">
+          <option value=""></option>
+          <option value="115x175 mm">115x175 mm</option>
+          <option value="120x160 mm">120x160 mm</option>
+          <option value="120x287 mm">120x287 mm</option>
+        </select>
+        <input type="text" name="format" value=""/>
+      </div>
     </div>
   </body>
 </html>
