--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,10 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .select-editable { position:relative; background-color:white; border:solid grey 1px;  width:120px; height:18px; }
-      .select-editable select { position:absolute; top:0px; left:0px; font-size:14px; border:none; width:120px; margin:0; }
-      .select-editable input { position:absolute; top:0px; left:0px; width:100px; padding:1px; font-size:12px; border:none; }
-      .select-editable select:focus, .select-editable input:focus { outline:none; }
+      .select-editable {
+        position: relative;
+        background-color: white;
+        border: solid grey 1px;
+        width: 120px;
+        height: 18px;
+      }
+      .select-editable select {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        font-size: 14px;
+        border: none;
+        width: 120px;
+        margin: 0;
+      }
+      .select-editable input {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100px;
+        padding: 1px;
+        font-size: 12px;
+        border: none;
+      }
+      .select-editable select:focus,
+      .select-editable input:focus {
+        outline: none;
+      }
     </style>
   </head>
 
@@ -22,7 +47,7 @@
           <option value="120x160 mm">120x160 mm</option>
           <option value="120x287 mm">120x287 mm</option>
         </select>
-        <input type="text" name="format" value=""/>
+        <input type="text" name="format" value="" />
       </div>
     </div>
   </body>
